v1.10 (patch 1):
- Change stack mode shortcut to Shift-D.
- Show subframe debugging position in the HUD.
- Show CRAY FILT mode in the debug HUD.
- Autoreload (if enabled) when attempting to save with particles out of order.
- If disabled, prevent autoreload when subframe debugging.
- Fix stack edit ctype display bug.
- Fix save location on command line open.
- Fix property tool rect/line bug.
- Fix interesting change detection not detecting killed particles.