@@ -130,7 +130,6 @@ public:
 	SimulationSample * GetSample();
 	int GetParticleDebugPosition();
 	ConfigTool * GetActiveConfigTool();
-	void ToggleConfigTool();
 	int GetStackEditDepth();
 	void SetStackEditDepth(int depth);
 	int GetReplaceModeFlags();
